1998-12-01  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (*suppress-old-style-hook-warning*): Set this to #t
	if you don't want the old style hook warnings.

1998-12-01  Christian Lynbech  <chl@tbit.dk>

	* boot-9.scm (try-using-libtool-name): Fix check on dlname to make
	sure that it isn't empty, as it is when we are only buidling
	static libraries.

1998-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* session.scm (arity): New procedure.

1998-11-26  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Use run-hook instead of run-hooks everywhere.

1998-11-26  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (run-hooks, add-hook!, remove-hook!): Added temporary
	code for backward compatibility until people have had time to
	adapt to the new hooks.

1998-11-23  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (beautify-user-module!): Beautify also if public
	interface is set to the module itself.  In this way we can use
	beautify-user-module! to beautify a module prepared for object
	code.
	(process-define-module): Special case: Try to load object code as
	well if a module does :use-module on itself.

	* boot-9.scm: Bugfix: Since boot-9.scm is now loaded from
	invoke_main_func, we can no longer be sure that all modules have
	been registered when boot-9.scm is loaded.
	(register-modules): New function: Register and tag modules
	registered by scm_register_module_xxx since last call to this
	function.  Modules are tagged with the dynamic object passed as
	argument.  (Already linked modules should be tagged with #f.)
	(init-dynamic-module, link-dynamic-module): Call register-modules
	first to register linked modules.

	* boot-9.scm (init-dynamic-module): Remove module from
	registered-modules as soon as possible in case we are recursively
	invoked; Set public interface before doing the dynamic-call.
	
	* boot-9.scm (map-in-order): Removed (replaced by scm_serial_map).
	(abort-hook, before-error-hook, after-error-hook,